# social-publisher-sub-agent

./: .env.example  docker-compose.dev.yaml  docker-compose.yaml  test-copilot-http.js  test-copilot.js  test-deepseek.js  test-fb-provider.js  test-fb.js  tsconfig.base.json
apps/backend/: .swcrc  package.json  tsconfig.build.json  tsconfig.json
apps/backend/src/: main.ts
apps/backend/src/api/: api.module.ts
apps/extension/: package.json
apps/geta_claw_ai/: .gitignore  README.md  guide-through.md  plan.md  pyproject.toml  test_chat.py  test_phase6.py  test_telegram_bot.py  walkthrough.md
apps/geta_claw_ai/backend/: Dockerfile  celery_app.py  celerybeat-schedule  core_agent.py  facebook_agent.py  init.sql  llm_router.py  main.py  rpa_executor.py  seed_ads.py  seed_inventory.py  tasks.py  workflow_engine.py
apps/geta_claw_ai/backend/video_engine/: assembler.py  content_writer.py  test_video_engine.py  tts_engine.py  video_editor.py
apps/geta_claw_ai/blog_tool/: README.md  pyproject.toml  refactor_plan.md  sites.json
apps/geta_claw_ai/blog_tool/.streamlit/: config.toml
apps/geta_claw_ai/blog_tool/data/: woocommerce_products.xlsx  woocommerce_products_sample.csv  woocommerce_products_sample.xlsx
apps/geta_claw_ai/blog_tool/database/: models.py  session.py
apps/geta_claw_ai/blog_tool/integrations/: google_sheets.py  google_sheets_mapping.py  google_sheets_transport.py  woocommerce.py  woocommerce_api_client.py  woocommerce_category_service.py  woocommerce_constants.py  woocommerce_helpers.py  wordpress.py
apps/geta_claw_ai/blog_tool/llm_engine/: agent.py  prompts.py
apps/geta_claw_ai/blog_tool/services/: article_repository.py  content_service.py  dtos.py  media_service.py  orchestrator.py  seo_scoring_service.py
apps/geta_claw_ai/blog_tool/ui/: app.py  state.py
apps/geta_claw_ai/blog_tool/ui/components/: articles_grid.py  auto_pilot_panel.py  generate_status.py  post_constants.py  post_dialogs.py  post_language.py  post_media_picker.py  processing_panel.py  product_panel.py  publishing_panel.py  sheets_toolbar.py  sidebar.py  site_selector.py  wc_status.py
apps/geta_claw_ai/frontend/: package-lock.json  package.json
apps/geta_claw_ai/frontend/src/: i18n.ts
apps/geta_claw_ai/frontend/src/app/: layout.tsx  page.tsx
apps/geta_claw_ai/scripts/: cron_generate_image.py  group_auto_poster.py  group_crawler.py  group_search_join.py  market_research.py  target_groups.txt
apps/geta_claw_ai/tools/: gemini_image_gen.py
apps/orchestrator/: nest-cli.json  package.json  tsconfig.json
(+26 files in other folders)
