[project]
name = "geta-automation-backend"
version = "1.0.0"
description = "GETA Unified Automation Backend (Blog Tool + E-commerce Pipeline + Video Engine)"
requires-python = ">=3.11"
dependencies = [
    # FastAPI Gateway & API
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.25.0",

    # Database & Storage
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.5",
    "sqlalchemy>=2.0.47",
    "duckdb>=0.10.0",
    "redis>=5.0.0",

    # AI & Agents
    "langgraph>=0.0.26",
    "langchain-core",
    "langchain-community",
    "langchain-openai",
    "langchain-google-genai>=4.2.1",
    "google-genai",

    # Task Scheduling
    "celery[redis]>=5.3.0",

    # UI & Frameworks
    "streamlit>=1.54.0",
    "pandas",
    "openpyxl>=3.1.5",
    "gspread>=6.1.4",
    "google-auth>=2.35.0",

    # Utilities
    "python-dotenv>=1.2.1",
    "tenacity>=9.1.4",
    "markdown>=3.7.0",
    "pillow>=11.3.0",
    "unidecode>=1.3.8",
    "psutil>=5.9.0",
    "requests>=2.32.5",
    "playwright>=1.40.0",

    # Video Engine Dependencies [NEW]
    "moviepy>=2.0.0",
    "scenedetect>=0.7.0",
    "vieneu>=3.2.3"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.uv]
package = false
