[project]
name = "blog-tool"
version = "0.1.0"
description = "SEO Automation Tool"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "pandas (<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "langchain-google-genai (>=4.2.1,<5.0.0)",
    "markdown (>=3.7.0,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "gspread (>=6.1.4,<7.0.0)",
    "google-auth (>=2.35.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.4,<0.16.0)"
]

# Khai báo cho Poetry: Đây không phải là package cần build
[tool.poetry]
package-mode = false

# Khai báo cho UV: Đây là Application, bỏ qua bước build và install workspace
[tool.uv]
package = false